--- a/guitars.html
+++ b/guitars.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="View a list of guitars available from Guitar Kings" />
     <title>Guitar Kings | Guitars</title>
+    <link href="css/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
         </nav>
     </header>
         <main>
-            <h1>Guitrs</h1>
+            <h1>Guitras</h1>
             <section>
                 <div>
                     <img src="images/product.jpg" alt="Adirondack Red"/>
