--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Get real authentic, hand-crafted guitars from Guitar Kings" />
     <title>Guitar Kings | Home</title>
+    <link href="css/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
@@ -17,12 +18,13 @@
                 <li><a href="contact.html">Contact</li>
             </ul>
         </nav>
-        <section>
-            <h1>Authentic Handmade Guitars</h1>
-            <a href="guitars.html">View Guitars</a>
-        </section>
+       
     </header>
         <main>
+            <section>
+                <h1>Authentic Handmade Guitars</h1>
+                <a href="guitars.html" class="cta-button">View Guitars</a>
+            </section>
             <section>
                 <div>
                 <h2>Our Guitars Are</h2>
@@ -47,27 +49,27 @@
             <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield"/>
         </div>
             </section>
-            <section>
+            <section class="featured">
                 <h2>View Our Guitars</h2>
-                <div>
+                <div class="featured products">
                     <img src="images/product.jpg" alt="Adirondack Red"/>
                     <h3>Adirondack Red</h3>
                     <p>$500</p>
                     <a href="products/adirondack-red.html">View</a>
                 </div>
-                <div>
+                <div class="featured products">
                     <img src="images/product.jpg" alt="Adirondack Red"/>
                     <h3>Adirondack Red</h3>
                     <p>$500</p>
                     <a href="products/adirondack-red.html">On Sale</a>
                 </div>
-                <div>
+                <div class="featured products">
                     <img src="images/product.jpg" alt="Adirondack Red"/>
                     <h3>Adirondack Red</h3>
                     <p>$500</p>
                     <a href="products/adirondack-red.html">View</a>
                 </div>
-                <div>
+                <div class="featured products">
                     <img src="images/product.jpg" alt="Adirondack Red"/>
                     <h3>Adirondack Red</h3>
                     <p>$500</p>
