--- a/index.html
+++ b/index.html
@@ -2,81 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Get real authentic, hand-crafted guitars from Guitar Kings" />
-    <title>Guitar Kings | Home</title>
-    <link href="css/styles.css" rel="stylesheet"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rainy Days</title>
 </head>
 <body>
-    <header>
-        <a href="index.html">Guitar Kings</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</li>
-                <li><a href="guitars.html">Guitars</li>
-                <li><a href="contact.html">Contact</li>
-            </ul>
-        </nav>
-       
-    </header>
-        <main>
-            <section>
-                <h1>Authentic Handmade Guitars</h1>
-                <a href="guitars.html" class="cta-button">View Guitars</a>
-            </section>
-            <section>
-                <div>
-                <h2>Our Guitars Are</h2>
-                <ul>
-                    <li>Made with real Pennysylvanian wood</li>
-                    <li>Crafted by a family-run business</li>
-                    <li>Built to last a lifetime</li>
-                    <li>Beautiful unique sound</li>
-                    <li>Options for all music lovers</li>
-                </ul>
-            </div>
-            <img src="images/home-info.jpg" alt="Hand strumming guitar"/>
-            </section>
-            <section>
-         <h2>Reviews</h2>
-         <div>
-         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis velit pharetra, venenatis justo at, scelerisque mi." - Bob Willis</p>
-         <img src="images/review-bio.jpg" alt="Profile picture of Bob Willis"/>
-        </div>
-        <div>
-            <p>"Mauris ullamcorper porta aliquam. Sed rhoncus tortor non nunc feugiat, nec tincidunt leo imperdiet." - Sally Oldfield</p>
-            <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield"/>
-        </div>
-            </section>
-            <section class="featured">
-                <h2>View Our Guitars</h2>
-                <div class="featured products">
-                    <img src="images/product.jpg" alt="Adirondack Red"/>
-                    <h3>Adirondack Red</h3>
-                    <p>$500</p>
-                    <a href="products/adirondack-red.html">View</a>
-                </div>
-                <div class="featured products">
-                    <img src="images/product.jpg" alt="Adirondack Red"/>
-                    <h3>Adirondack Red</h3>
-                    <p>$500</p>
-                    <a href="products/adirondack-red.html">On Sale</a>
-                </div>
-                <div class="featured products">
-                    <img src="images/product.jpg" alt="Adirondack Red"/>
-                    <h3>Adirondack Red</h3>
-                    <p>$500</p>
-                    <a href="products/adirondack-red.html">View</a>
-                </div>
-                <div class="featured products">
-                    <img src="images/product.jpg" alt="Adirondack Red"/>
-                    <h3>Adirondack Red</h3>
-                    <p>$500</p>
-                    <a href="products/adirondack-red.html">View</a>
-                </div>
-            </section>
-        </main>
-        <footer>Copyright &copy;</footer>
+    
 </body>
 </html>
