--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainy Days</title>
+    <meta name="description" content="outdoor jackets">
+    <title>Rainy Days | Home</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Rainy Days</a>
+        <nav>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="men.html">Men</a></li>
+            <li><a href="women.html">Women</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="wishlist.html">Wishlist</a></li>
+            <li><a href="shopping cart.html">Shopping Cart</a></li>
+        </nav>
+        <section>
+            <h1>Pushing The Comfort Zone</h1>
+        </section>
+    </header>
+    <main>
+        <section>
+            <h2>Outdoor Jackets</h2>
+            <ul>
+                <li>Designed for outdoor</li>
+                <li>All season</li>
+                <li>Durable</li>
+                <li>Stylish</li>
+                <li>Comfortable</li>
+                <li>Affordable</li>
+            </ul>
+        </section>
+    </main>
     
 </body>
 </html>
