--- a/index.html
+++ b/index.html
@@ -5,35 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="outdoor jackets">
     <title>Rainy Days | Home</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <a href="index.html">Rainy Days</a>
+    <div class="container">
+    <div class="navbar">
+        <div class="logo">
+            <img src="logo/RainyDays_Logo.png" width="125px">
+        </div>
         <nav>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="men.html">Men</a></li>
-            <li><a href="women.html">Women</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="wishlist.html">Wishlist</a></li>
-            <li><a href="shopping cart.html">Shopping Cart</a></li>
-        </nav>
-        <section>
-            <h1>Pushing The Comfort Zone</h1>
-        </section>
-    </header>
-    <main>
-        <section>
-            <h2>Outdoor Jackets</h2>
             <ul>
-                <li>Designed for outdoor</li>
-                <li>All season</li>
-                <li>Durable</li>
-                <li>Stylish</li>
-                <li>Comfortable</li>
-                <li>Affordable</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Account</a></li>
             </ul>
-        </section>
-    </main>
+        </nav>
+        <div class="home1">
+            <img src="image/HomePage1.jpg"/>
+          </div>
+    </div>
+    </div>
+    <h1>Outdoor Jackets</h1>
+            <p>Designed for all season, all season, durable, stylish,comfortable, affordable</p>
+</div>
+<div class="home2">
+    <img src="image/HomePage3.jpg"/>
+
+</div>
+
     
 </body>
 </html>
