--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days | Home</title>
-    <link href="css/style.css" rel="sylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <img src="logo/RainyDays_Logo.png" width="125px"/>
     </div>
 </div>
-<div class="Navigation">
+<div class="navigation">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
