--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days | Home</title>
     <link href="css/style.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <div class="container">
         <div class="navbar">
         <div class="logo">
         <img src="logo/RainyDays_Logo.png" width="125px"/>
-    </div>
-</div>
-<div class="navigation">
+        </div>
+        </div>
+        <div class="navigation">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,25 +27,24 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="account.html">Account</a></li>
             </ul>
+            <div class="icon">
+            <img src="icons/shopping-cart.png" alt="shopping cart icon">
+        </div>
         </nav>
+       </div>
+       <div class="row">
+        <div class="col-2">
+            <h1>Outdoor Jackets </h1>
+            <p>Designed for outdoor All season Durable Stylish Comfortable Affordable</p>
+            <a href="" class="cta">Explore</a>
+        </div>
+        <div class="col-2">
+            <img src="images/HomePage2.jpg" alt="Couple on a mountail top">
+        </div>
+    </div>
     </div>
     </header>
     <main>
-        <section>
-            <img src="images/HomePage1.jpg" alt="Main jumping in rain"/>
-            <div>
-            <h1>Outdoor Jackets </h1>
-                <ul>
-                    <li>Designed for outdoor</li>
-                    <li>All season</li>
-                    <li>Durable</li>
-                    <li>Stylish</li>
-                    <li>Comfortable</li>
-                    <li>Affordable</li>
-                </ul>
-            </div>
-            <img src="images/HomePage3.jpg" alt="Girl playing with rain"/>
-        </section>
     </main>
     
 </body>
