--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
         <div class="navbar">
         <div class="logo">
-        <img src="logo/RainyDays_Logo.png" width="125px"/>
+        <img src="logo/RainyDays_Logo.png" alt="snow capped mountain"/>
         </div>
         </div>
         <div class="navigation">
