--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="col-2">
             <h1>Outdoor Jackets </h1>
             <p>Designed for outdoor All season Durable Stylish Comfortable Affordable</p>
-            <a href="" class="cta">Explore</a>
+            <a href="products.html" class="cta">Explore</a>
         </div>
         <div class="col-2">
             <img src="images/HomePage2.jpg" alt="Couple on a mountail top">
