--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="container">
         <div class="navbar">
         <div class="logo">
-        <img src="logo/RainyDays_Logo.png" alt="snow capped mountain"/>
+        <a href="index.html"><img src="logo/RainyDays_Logo.png" alt="snow capped mountain"/></a>
         </div>
         </div>
         <div class="navigation">
