--- a/product-details.html
+++ b/product-details.html
@@ -44,7 +44,7 @@
                <div class="col-2">
                    <p>Home / Jackets</p>
                    <h1>Yellow Rain Jacket</h1>
-                   <h2>500 Kroner</h2>
+                   <h2>500 NOK</h2>
                    <select>
                        <option>Size</option>
                        <option>S</option>
@@ -80,7 +80,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
@@ -92,7 +92,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
@@ -104,7 +104,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="olive green hiking jacket">
@@ -116,7 +116,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
     </div>
     <div class="page-cta">
@@ -162,6 +162,6 @@
         </div>
     </div>
 </div>
-    
+<script src="js/script.js"></script>   
 </body>
 </html>
