--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
@@ -69,7 +69,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
@@ -81,7 +81,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="winter jacket with fur hoodie">
@@ -93,7 +93,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/RainJacket1.jpg" alt="yellow men rain jacket">
@@ -105,7 +105,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
@@ -117,7 +117,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
@@ -129,7 +129,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="winter jacket with fur hoodie">
@@ -141,7 +141,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/RainJacket1.jpg" alt="yellow men rain jacket">
@@ -153,7 +153,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
@@ -165,7 +165,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
@@ -177,7 +177,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="winter jacket with fur hoodie">
@@ -189,7 +189,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/RainJacket1.jpg" alt="yellow men rain jacket">
@@ -201,7 +201,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
@@ -213,7 +213,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
@@ -225,7 +225,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="winter jacket with fur hoodie">
@@ -237,7 +237,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>500 Kroner</p>
+            <p>500 NOK</p>
         </div>
         
     </div>
@@ -284,6 +284,6 @@
         </div>
     </div>
 </div>
-    
+<script src="js/script.js"></script>  
 </body>
 </html>
