--- a/account.html
+++ b/account.html
@@ -45,8 +45,9 @@
                   <div class="col-2">
                       <div class="form-container">
                           <div class="form-cta">
-                              <span>Login</span>
-                              <span>Register</span>
+                              <span onclick="login()">Login</span>
+                              <span onclick="register()">Register</span>
+                              <hr id="Indicator">
                           </div>
                           <form id="LoginForm">
                               <input type="text" placeholder="Username">
@@ -100,6 +101,6 @@
         </div>
     </div>
 </div>
-    
+ <script src="js/account.js"></script>   
 </body>
 </html>
