renamed outdoor jacket to rainy days

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        </div>
        <div class="row">
         <div class="col-2">
-            <h1>Outdoor Jackets </h1>
+            <h1>Rainy Days Jackets </h1>
             <p>Designed for outdoor All season Durable Stylish Comfortable Affordable</p>
             <a href="products.html" class="cta">Explore</a>
         </div>
