--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+
 <!-- Hotjar Tracking Code for https://delicate-fairy-fbfa12.netlify.app/ -->
 <script>
     (function(h,o,t,j,a,r){
@@ -73,49 +73,21 @@
         <div class="col-4">
            <a href="product-details.html"><img src="images/RainJacket1.jpg" alt="yellow men rain jacket"></a>
            <a href="product-details.html"><h3>Yellow Rain Jacket</h3></a> 
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
             <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/HikingJacket1.jpg" alt="olive green hiking jacket">
             <h3>Olive Green Hiking Jacket</h3>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
             <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/SkiJacket2.jpg" alt="yellow ski jacket">
             <h3>Yellow Ski Jacket</h3>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
             <p>500 NOK</p>
         </div>
         <div class="col-4">
             <img src="images/WinterJacketWomen.jpg" alt="winter jacket with fur hoodie">
             <h3>Winter Jacket Women</h3>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
             <p>500 NOK</p>
         </div>
     </div>
@@ -155,6 +127,7 @@
         </div>
     </div>
 </div>
- <script src="js/script.js"></script>   
+ <script src="js/script.js"></script>
+ <script src="js/shoppingcart.js"></script>   
 </body>
 </html>
