--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </script>
 </head>
 <body>
-    <header>
         <div class="container">
         <div class="navbar">
         <div class="logo">
@@ -41,8 +40,12 @@
             </ul>
             </div>
         </nav>
-           <a href="cart.html"><img src="icons/shopping-cart.png" class="icon"alt="shopping cart icon"></a> 
-                <img src="icons/list.png" class="menu-icon" alt="hamburger menu icon" onclick="menutoggle()">
+        <div class="icon">
+           <a href="cart.html"><img src="icons/shopping-cart.png" class="icon"alt="shopping cart icon"></a>
+        </div>
+        <div class="menu-icon"> 
+            <img src="icons/list.png" class="menu-icon" alt="hamburger menu icon" onclick="menutoggle()">
+        </div>
        </div>
        <div class="row">
         <div class="col-2">
@@ -55,7 +58,6 @@
         </div>
     </div>
     </div>
-    </header>
     <!----featured category---->
     <div class="categories">
         <div class="small container">
